# ocaml-changelog-analyzer

analyzer/: analyzer.ml  ar_histogram.ml  cat_history.ml  common.ml  contributor_history.ml  contributor_history_ballet.ml  contributor_list.ml  dune  social.ml  sorted_contributions.ml  total_contribution.ml
parse/: changelog_parse.ml  dune  entry.ml  group_by.ml  helpers.ml  refs.ml  release.ml  sapient.ml  section.ml
plot/: authors_by_release.plot  contrib_cloud.plot  contrib_cloud_by_release.plot  contrib_cloud_movie.plot  hist.plot  number_of_contributions.plot
refs/: changes.json
src/: changestat.ml  dune
structured_format/: def.ml  dune
