(library
 (name common)
 (modules common)
 (libraries changelog)
)

(executable
 (name contributor_list)
 (modules contributor_list)
 (libraries yojson changelog common fmt)
)

(executable
 (name ar_histogram)
 (modules ar_histogram)
 (libraries yojson changelog common fmt)
)

(executable
 (name sorted_contributions)
 (modules sorted_contributions)
 (libraries yojson changelog common fmt)
)


(executable
 (name cat_history)
 (modules cat_history)
 (libraries yojson changelog common fmt)
)


(executable
 (name contributor_history)
 (modules contributor_history)
 (libraries yojson changelog common fmt)
)


(executable
 (name contributor_history_ballet)
 (modules contributor_history_ballet)
 (libraries yojson changelog common fmt)
)


(executable
 (name total_contribution)
 (modules total_contribution)
 (libraries yojson changelog common fmt)
)



(executable
 (name social)
 (modules social)
 (libraries yojson changelog common fmt)
)
